--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,3 +11,14 @@ jobs:
       - uses: cypress-io/github-action@v2
         with:
           browser: chrome
+      - uses: cypress-io/github-action
+      - uses: actions/upload-artifact@v1
+        if: always()
+        with:
+          name: cypress-videos
+          path: cypress/videos
+      - uses: actions/upload-artifact@v1
+        if: always()
+        with:
+          name: cypress-screenshots
+          path: cypress/screenshots
