--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
   "license": "ISC",
   "dependencies": {
     "cypress": "^7.5.0",
-    "mocha": "^9.0.0",
-    "mochawesome": "^6.2.2",
-    "mochawesome-merge": "^4.2.0"
+    "cypress-mochawesome-reporter": "^2.1.1"
   }
 }
