--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "cypress run  --browser chrome --headless"
+    "test": "cypress run  --browser chrome --headless",
+    "prettier": "prettier --write ./cypress/**/*.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cypress": "^7.5.0",
     "cypress-mochawesome-reporter": "^2.1.1"
+  },
+  "devDependencies": {
+    "eslint-plugin-cypress": "^2.11.3",
+    "prettier": "2.3.1"
   }
 }
