--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "cypress run  --browser chrome --headless",
+    "lint": "eslint cypress --fix",
     "prettier": "prettier --write ./cypress/**/*.js"
   },
   "author": "",
@@ -14,6 +15,7 @@
     "cypress-mochawesome-reporter": "^2.1.1"
   },
   "devDependencies": {
+    "eslint-config-standard": "^16.0.3",
     "eslint-plugin-cypress": "^2.11.3",
     "prettier": "2.3.1"
   }
