--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cypress-mochawesome-reporter": "^2.1.1"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-cypress": "^2.11.3",
     "prettier": "2.3.1"
