--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install
         run: npm install
       - name: Run test
-        run: npm run test
+        run: npm run test:dev
       - name: Copy test to public dir
         run: |
           mkdir public
@@ -33,7 +33,7 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "tester-report"
-          heroku_email: "aekachai.b@20scoops.net"
+          heroku_app_name: 'tester-report'
+          heroku_email: 'aekachai.b@20scoops.net'
         env:
           CI: true
